# customer-support-rag

./: .env.example  .gitignore  RAG_Project_Submission.ipynb  README.md  pyproject.toml  pytest.ini  requirements.txt  test_retriever.py
.ipynb_checkpoints/: RAG_Project_Submission-checkpoint.ipynb
data/chunks/: chunks_with_embeddings.json  processed_chunks.json
data/raw/: billing_policy.txt  faqs.txt  fup_policy.txt  plan_activation.txt  roaming_tariff.txt
docs/: Business_Presentation_Outline.md  Business_Summary.md  Cost_Comparison_INR.md  Cost_Comparison_Summary.md  LANGGRAPH_README.md  QUICKSTART.md  RAG_Project_Submission.html  Technical_Report.md
logs/: interactions.jsonl
src/: __init__.py
src/data_preparation/: __init__.py  chunker.py  document_loader.py  process_pipeline.py  text_cleaner.py
src/embeddings/: __init__.py  build_vector_store.py  embedding_generator.py
src/generation/: __init__.py  answer_generator.py  prompt_templates.py
src/langgraph_rag/: __init__.py  graph.py  models.py  prompts.py  state.py
src/langgraph_rag/nodes/: __init__.py  generate.py  grade.py  regenerate.py  retrieve.py  validate.py
src/retrieval/: __init__.py  retriever.py
src/ui/: __init__.py  streamlit_app.py  streamlit_langgraph.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  pytest_results.json  test_queries.py  test_rag_pytest.py  test_system.py
